--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -4,7 +4,11 @@
 {% block content%}
 <section class="section-pagetop bg">
     <div class="container">
+        {% if 'search' in request.path %}
+        <h2 class="title-page">Search Result</h2>
+        {% else %}
         <h2 class="title-page">Our Store</h2>
+        {% endif %}
         
     </div> <!-- container //  -->
 </section>
@@ -126,6 +130,7 @@
     </header><!-- sect-heading -->
     
     <div class="row">
+        {% if products %}
         {% for product in products %}
         <div class="col-md-4">
             <figure class="card card-product-grid">
@@ -147,7 +152,11 @@
             </figure>
         </div> <!-- col.// -->
         {% endfor%}
-        
+        {% else %}
+        <div>
+            <h4> No Result Found, Try Again!</h4>
+        </div>
+        {% endif %}
     </div> <!-- row end.// -->
     
     
