--- a/templates/custom_admin/category/category.html
+++ b/templates/custom_admin/category/category.html
@@ -6,20 +6,7 @@
 <section style="margin-top: 5rem;"></section>
 
 <div class="col-12">
-    <div class="card recent-sales overflow-auto">
-      
-      <div class="filter">
-        <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-          <li class="dropdown-header text-start">
-            <h6>Filter</h6>
-          </li>
 
-          <li><a class="dropdown-item" href="#">Today</a></li>
-          <li><a class="dropdown-item" href="#">This Month</a></li>
-          <li><a class="dropdown-item" href="#">This Year</a></li>
-        </ul>
-      </div>
 
       <div class="card-body">
        
@@ -28,6 +15,7 @@
             <tr>
               <th scope="col">Category Name</th>
               <th scope="col">Slug</th>
+              <th scope="col">Update</th>
               
             </tr>
           </thead>
@@ -39,6 +27,7 @@
               <!-- <td>{{ cr.id}}</td> -->
               <td>{{ cr.category_name}}</td>
               <td>{{ cr.slug}}</td>
+              <td><a href="{% url 'edit_category' cr.id %}" class="btn btn-default me-md-4" role="button">update</a></td>
               
          
           {% endfor %}
