--- a/templates/custom_admin/category/edit_category.html
+++ b/templates/custom_admin/category/edit_category.html
@@ -10,7 +10,7 @@
     
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Add Category Form </h5>
+                <h5 class="card-title">Edit Category Form </h5>
     
                 <!-- General Form Elements -->
                 <form action="" enctype='multipart/form-data'  method="POST">
