--- a/templates/custom_admin/dashboard.html
+++ b/templates/custom_admin/dashboard.html
@@ -51,12 +51,6 @@
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
-    <div class="search-bar">
-      <form class="search-form d-flex align-items-center" method="POST" action="#">
-        <input type="text" name="query" placeholder="Search" title="Enter search keyword">
-        <button type="submit" title="Search"><i class="bi bi-search"></i></button>
-      </form>
-    </div><!-- End Search Bar -->
 
     <nav class="header-nav ms-auto">
       <ul class="d-flex align-items-center">
@@ -112,8 +106,6 @@
               <i class="bi bi-circle"></i><span>Add Product</span>
             </a>
           </li>
-         
-         
         </ul>
       </li>
       <!-- ========================================================================================== -->
@@ -159,11 +151,24 @@
          
         </ul>
       </li>
-
+      <!--========================================================================================-->
+      <li class="nav-item">
+        <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+          <i class="bx bxs-cart"></i><span>Order Managment</span><i class="bi bi-chevron-down ms-auto"></i>
+        </a>
+        <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+          <li>
+            <a href="#">
+              <i class="bi bi-circle"></i><span>Order Details</span>
+            </a>
+          </li>
+         
+        </ul>
+      </li>
       
     </ul>
 
-  </aside><!-- End Sidebar-->d Profile Page Nav -->
+  </aside><!-- End Sidebar-->
 
 
 
