--- a/templates/custom_admin/products/products.html
+++ b/templates/custom_admin/products/products.html
@@ -31,6 +31,7 @@
               <th scope="col">stock</th>
               <th scope="col">category</th>
               <th scope="col">modified_date</th>
+              <th scope="col">Edit</th>
               
             </tr>
           </thead>
@@ -45,6 +46,7 @@
               <td>{{ cr.stock}}</td>
               <td>{{ cr.category}}</td>
               <td>{{ cr.modified_date}}</td>
+              <td><a href="{% url 'edit_product' cr.id %}" class="btn btn-default me-md-4" role="button">update</a></td>
               
               
            
