--- a/templates/custom_admin/variation/edit_variation.html
+++ b/templates/custom_admin/variation/edit_variation.html
@@ -3,6 +3,7 @@
 
   
 {% block content %}
+    
 
     <section class="section container" style="margin-top: 5rem;">
         <div class="row ">
@@ -10,41 +11,45 @@
     
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Add Category Form </h5>
+                <h5 class="card-title">Edit Variation Form </h5>
     
                 <!-- General Form Elements -->
                 <form action="" enctype='multipart/form-data'  method="POST">
                     {% csrf_token %}
                   <div class="row mb-3">
-                    <label for="inputText" class="col-sm-2 col-form-label">Category Name</label>
+                    <label for="inputbox" class="col-sm-2 col-form-label">Product Name</label>
                     <div class="col-sm-10">
-                        {{ cform.category_name }}
+                        {{ vform.product_name }}
                     </div>
                   </div>
                   
+                  <div class="row mb-3">
+                    <label for="inputtext" class="col-sm-2 col-form-label">Variation Category</label>
+                    <div class="col-sm-10">
+                        {{ vform.variation_category }}
+                    </div>
+                  </div>
                    
                   <div class="row mb-3">
-                    <label for="inputPassword" class="col-sm-2 col-form-label">Slug</label>
+                    <label for="inputPassword" class="col-sm-2 col-form-label">Variation Value</label>
                     <div class="col-sm-10">
-                        {{ cform.slug}}
+                        {{ vform.variation_val}}
                     </div>
                   </div>
                   <div class="row mb-3">
-                    <label for="inputPassword" class="col-sm-2 col-form-label">Description</label>
+                    <label for="inputPassword" class="col-sm-2 col-form-label">Is Active</label>
                     <div class="col-sm-10">
-                        {{ cform.description }}
+                        {{ vform.is_active }}
     
                     </div>
                   </div>
                   <div class="row mb-3">
-                    <label for="inputNumber" class="col-sm-2 col-form-label">Image</label>
+                    <label for="inputNumber" class="col-sm-2 col-form-label">Created Date</label>
                     <div class="col-sm-10">
-                        {{ cform.cat_image}}
+                        {{ vform.created_date}}
     
-                    </div>
                   </div>
-               
-    
+
                   <div class="row mb-3">
                     <label class="col-sm-2 col-form-label">Submit Button</label>
                     <div class="col-sm-10">
