--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -28,6 +28,10 @@
 <!-- custom javascript -->
 <script src="{% static 'store/js/script.js'%}" type="text/javascript"></script>
 
+<!-- PayPal Script -->
+<script src="https://www.paypal.com/sdk/js?client-id=AeSh-USZT-p6Y-2sagYNVAGzPP2VRzolfX4I1QPhuoPGLp7l0yK6_N_unY_-2bcVxp6eqw4s2lSMLHWJ&currency=USD"></script>
+
+
 <script type="text/javascript">
 /// some script
 
