--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -7,9 +7,7 @@
       <h4 class="card-title mb-4">Reset Password</h4>
       <form action="{% url 'reset_password' %}" method="POST">
         {% csrf_token %} 
-            {% for message in messages %}
-            <h6 class="bg-danger">{{ message }}</h6>
-            {% endfor %}
+            {% include 'store/includes/messages.html' %}
             <div class="form-group">
                 <input type="password" class="form-control" placeholder="Create Password" name="password">
             </div> <!-- form-group// -->
