--- a/templates/custom_admin/admin_dashboard.html
+++ b/templates/custom_admin/admin_dashboard.html
@@ -1,42 +1,6 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>Dashboard - NiceAdmin Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link href="{% static 'customadmin/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'customadmin/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="{% static 'customadmin/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static 'customadmin/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
-  <link href="{% static 'customadmin/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
-  <link href="{% static 'customadmin/vendor/quill/quill.snow.css' %}" rel="stylesheet">
-  <link href="{% static 'customadmin/vendor/quill/quill.bubble.css' %}" rel="stylesheet">
-  <link href="{% static 'customadmin/vendor/remixicon/remixicon.css' %}" rel="stylesheet">
-  <link href="{% static 'customadmin/vendor/simple-datatables/style.css' %}" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="{% static 'customadmin/css/style.css' %}" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: NiceAdmin - v2.4.1
-  * Template URL: https://bootstrapmade.com/nice-custoadmin-bootstrap-custoadmin-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-     ======================================================== -->
-</head>
+{% include 'custom_admin/include/nav.html' %}
 
 <body>
 
@@ -75,7 +39,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="{% url 'dashboard' %}">
+        <a class="nav-link " href="{% url 'admin_dashboard' %}">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -158,60 +122,34 @@
         </a>
         <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="#">
+            <a href="{% url 'order_management' %}">
               <i class="bi bi-circle"></i><span>Order Details</span>
             </a>
           </li>
          
         </ul>
       </li>
-      
+      <ul>
+        <li class="nav-item">
+          <a class="nav-link collapsed" href="{% url 'sales' %}">
+            <i class="bi bi-box-arrow-in-right"></i>
+            <span>Sales Report</span>
+          </a>
+        </li>
     </ul>
+      <ul>
+          <li class="nav-item">
+            <a class="nav-link collapsed" href="{% url 'signout_admin' %}">
+              <i class="bi bi-box-arrow-in-right"></i>
+              <span>Logout</span>
+            </a>
+          </li>
+      </ul>
 
   </aside><!-- End Sidebar-->
 
+  <!-- ========================================================================================== -->
 
-
-      <!-- ==================================================================================== -->
-      
-      <!-- ========================================================================================== -->
-
-     
-     
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'signout_admin' %}">
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Logout</span>
-        </a>
-      </li><!-- End Register Page Nav -->
-
-      <!-- <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-login.html">
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Login</span>
-        </a>
-      </li> -->
-      <!-- End Login Page Nav -->
-
-      <!-- <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-error-404.html">
-          <i class="bi bi-dash-circle"></i>
-          <span>Error 404</span>
-        </a>
-      </li> -->
-      <!-- End Error 404 Page Nav -->
-
-      <!-- <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-blank.html">
-          <i class="bi bi-file-earmark"></i>
-          <span>Blank</span>
-        </a>
-      </li> -->
-      <!-- End Blank Page Nav -->
-
-    </ul>
-
-  </aside><!-- End Sidebar-->
 
   <main id="main" class="main">
 
@@ -237,33 +175,4 @@
 
   
     <!-- ======= Footer ======= -->
-    <footer id="footer" class="footer">
-        <div class="copyright">
-          &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
-        </div>
-        <!-- <div class="credits"> -->
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-customadmin-bootstrap-customadmin-html-template/ -->
-          <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-        <!-- </div> -->
-      </footer><!-- End Footer -->
-    
-     
-      <!-- Vendor JS Files -->
-      <script src="{% static 'customadmin/vendor/apexcharts/apexcharts.min.js' %}"></script>
-      <script src="{% static 'customadmin/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-      <script src="{% static 'customadmin/vendor/chart.js/chart.min.js' %}"></script>
-      <script src="{% static 'customadmin/vendor/echarts/echarts.min.js' %}"></script>
-      <script src="{% static 'customadmin/vendor/quill/quill.min.js' %}"></script>
-      <script src="{% static 'customadmin/vendor/simple-datatables/simple-datatables.js' %}"></script>
-      <script src="{% static 'customadmin/vendor/tinymce/tinymce.min.js' %}"></script>
-      <script src="{% static 'customadmin/vendor/php-email-form/validate.js' %}"></script>
-    
-      <!-- Template Main JS File -->
-      <script src="{% static 'customadmin/js/main.js' %}"></script>
-    
-    </body>
-    
-    </html>
+    {% include 'custom_admin/include/footer.html' %}
