--- a/templates/custom_admin/orders/order_detail_admin.html
+++ b/templates/custom_admin/orders/order_detail_admin.html
@@ -1,4 +1,4 @@
-{% extends 'store/base.html' %}
+{% extends 'custom_admin/admin_dashboard.html' %}
 {% load static %}
 {% block content %}
 
@@ -45,10 +45,10 @@
 
                                     {% else %}
                                     <ul class="list-unstyled mb0">
-                                        <li><strong>Order :</strong> {{order_number}}</li>
-                                        <li><strong>Transaction :</strong> {{transID}} </li>
+                                        <li><strong>Order :</strong> {{order.order_number}}</li>
+                                        <li><strong>Transaction :</strong> {{order.payment.payment_id}} </li>
                                         <li><strong>Order Date :</strong> {{order.created_at}}</li>
-                                        <li><strong>Status :</strong> {{payment.status}}</li>
+                                        <li><strong>Status :</strong> {{order.status}}</li>
                                     </ul>
                                     {% endif %}
                                 </div>
@@ -101,9 +101,6 @@
                             </div>
                             <div class="invoice-footer mt25">
                                 <p class="text-center">Thank you for shopping with us!</p>
-                            </div>
-                            <div class="container">
-                                <button></button>
                             </div>
                         </div>
                         <!-- col-lg-12 end here -->
