--- a/templates/orders/order_complete.html
+++ b/templates/orders/order_complete.html
@@ -5,10 +5,7 @@
 <div class="container" style="margin-top: 50px;">
     <center><i class="fas fa-check-circle" style="font-size: 72px;margin-bottom: 20px;color: #28A745;"></i></center>
     <h2 class="text-center">Payment Successful</h2>
-	<br>
-	<div class="text-center">
-		<a href="{% url 'store' %}" class="btn btn-success">Shop more</a>
-	</div>
+
 </div>
 
 <div class="container" style="margin: 0 auto;width: 50%;padding: 50px;background: #f1f1f1;margin-top: 50px;margin-bottom: 50px;">
@@ -32,8 +29,8 @@
                                     <li><strong>Invoiced To</strong></li>
                                     <li>{{order.full_name}}</li>
                                     <li>{{order.full_address}}</li>
-                                    <li>{{order.city}},{{order.state}}</li>
-                                    <li>{{order.country}}</li>
+                                    <li>{{order.shipping.city}},{{order.shipping.state}}</li>
+                                    <li>{{order.shipping.country}}</li>
                                 </ul>
                             </div>
                         </div>
@@ -42,12 +39,22 @@
                             <!-- col-lg-12 start here -->
                             <div class="invoice-details mt25">
                                 <div class="well">
+                                    {%if order.payment_mode == 'Cash On Delivery'%}
+                                    <ul class="list-unstyled mb0">
+                                        <li><strong>Order :</strong> {{order.order_number}}</li>
+                                        <li><strong>Payment Method :</strong> {{order.payment_mode}} </li>
+                                        <li><strong>Order Date :</strong> {{order.created_at}}</li>
+                                        <li><strong>Status :</strong> {{order.status}}</li>
+                                    </ul>
+
+                                    {% else %}
                                     <ul class="list-unstyled mb0">
                                         <li><strong>Order :</strong> {{order_number}}</li>
                                         <li><strong>Transaction :</strong> {{transID}} </li>
                                         <li><strong>Order Date :</strong> {{order.created_at}}</li>
                                         <li><strong>Status :</strong> {{payment.status}}</li>
                                     </ul>
+                                    {% endif %}
                                 </div>
                             </div>
                            
@@ -107,6 +114,13 @@
             </div>
             <!-- End .panel -->
         </div>
+        <div class="container">
+            <div class="text-center">
+                <a href="{% url 'store' %}" class="btn btn-success">Shop more</a>
+            </div>
+        </div>
+    
+        
         <!-- col-lg-12 end here -->
     </div>
     </div>
