--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -27,55 +27,47 @@
                     <h6 class="title">Categories</h6>
                 </a>
             </header>
-            <div class="filter-content collapse show" id="collapse_1" style="">
+            <div class="filter-content collapse show" id="collapse_1">
                 <div class="card-body">
                     
                     <ul class="list-menu">
-                    <li><a href="#">People  </a></li>
-                    <li><a href="#">Watches </a></li>
-                    <li><a href="#">Cinema  </a></li>
-                    <li><a href="#">Clothes  </a></li>
-                    <li><a href="#">Home items </a></li>
-                    <li><a href="#">Animals</a></li>
-                    <li><a href="#">People </a></li>
+                        {% for category in links %}
+                        <li><a class="dropdown-item" href="{{category.get_url}}">{{category.category_name}}</a></li>    
+                        {% endfor%}
                     </ul>
     
                 </div> <!-- card-body.// -->
             </div>
         </article> <!-- filter-group  .// -->
+
+       
         <article class="filter-group">
             <header class="card-header">
-                <a href="#" data-toggle="collapse" data-target="#collapse_4" aria-expanded="true" class="">
+                <a href="#" data-toggle="collapse" data-target="#collapse_3" aria-expanded="true" class="">
                     <i class="icon-control fa fa-chevron-down"></i>
-                    <h6 class="title">Sizes </h6>
+                    <h6 class="title">Price Filter </h6>
                 </a>
+
+    
             </header>
-            <div class="filter-content collapse show" id="collapse_4" style="">
+            <div class="filter-content collapse show" id="collapse_1">
                 <div class="card-body">
-                  <label class="checkbox-btn">
-                    <input type="checkbox">
-                    <span class="btn btn-light"> XS </span>
-                  </label>
-    
-                  <label class="checkbox-btn">
-                    <input type="checkbox">
-                    <span class="btn btn-light"> SM </span>
-                  </label>
-    
-                  <label class="checkbox-btn">
-                    <input type="checkbox">
-                    <span class="btn btn-light"> LG </span>
-                  </label>
-    
-                  <label class="checkbox-btn">
-                    <input type="checkbox">
-                    <span class="btn btn-light"> XXL </span>
-                  </label>
-            </div><!-- card-body.// -->
+                    <button class="btn btn-outline-info btn-sm" >
+                        <a href="{% url 'price_high' %}" >High to Low</a>
+                    </button>
+                    <button class="btn btn-outline-info btn-sm">
+                        <a href="{% url 'price_low' %}">Low to High</a>
+                    </button>
+               </div> <!-- card-body.// -->
             </div>
-        </article> <!-- filter-group .// -->
-        
-        <article class="filter-group">
+
+
+
+
+
+
+
+             <!--
             <header class="card-header">
                 <a href="#" data-toggle="collapse" data-target="#collapse_3" aria-expanded="true" class="">
                     <i class="icon-control fa fa-chevron-down"></i>
@@ -89,6 +81,7 @@
                     <div class="form-group col-md-6">
                       <label>Min</label>
                       <!-- <input class="form-control" placeholder="$0" type="number"> -->
+<!--
                           <select class="mr-2 form-control">
                             <option value="0">$0</option>
                             <option value="50">$50</option>
@@ -111,12 +104,13 @@
                             <option value="2000">$2000+</option>
                         </select>
                     </div>
-                    </div> <!-- form-row.// -->
+                    </div>  form-row.// 
                     <button class="btn btn-block btn-primary">Apply</button>
-                </div><!-- card-body.// -->
+                </div><!-- card-body.// 
             </div>
-        </article> <!-- filter-group .// -->
-        
+             -->
+        </article> 
+  
     </div> <!-- card.// -->
     
         </aside> <!-- col.// -->
